fixed the width on tablets

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -138,3 +138,10 @@ h1, h2, h3, h4, h5, h6 {
         margin-right: 5%;
     }
 }
+
+@media only screen and (max-width: 1100px) {
+    main {
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+}
